welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: value a
while (a!=11) {
       ^Balin:3: error: not found: value a
	a=0
        ^Balin:19: error: not found: value a
	a=a+1
        ^